# advent_of_code_2024

./: CMakeLists.txt
day1/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
tool/: CMakeLists.txt
tool/include/: strings.hpp
tool/src/: strings.cpp
